--- a/index.html
+++ b/index.html
@@ -155,6 +155,16 @@
                     <li>Understood ETL processing and CI/CD pipelines</li>
                 </ul>
             </details>
+            <h5>Skills</h5>
+            <ul>
+                <li>Java</li>
+                <li>Python</li>
+                <li>C</li>
+                <li>React</li>
+                <li>Agile Development</li>
+                <li>Git</li>
+                <li>GitHub</li>
+            </ul>
         </section>
         <section id="extracirriculars">
             <header>
