--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <header>
                 <h3>Contact Me</h3>
             </header>
-            <form action="" method="post">
+            <form>
                 <div id="basic_details">
                     <fieldset>
                         <legend>Basic Info</legend>
@@ -216,7 +216,7 @@
                         </datalist>
                         <br>
                         <label for="reason">Reason for Contact:</label>
-                        <select for="reason" name="reason">
+                        <select name="reason" id="reason">
                             <optgroup label="Professional"></optgroup>
                             <option>Potential Job</option>
                             <option>Establish a Connection</option>
@@ -288,7 +288,7 @@ From the album, Low is my favorite.</pre>
                 I really enjoy uisng HTML. Some tags I have liked using are the <code>canvas</code> tag as well as the <code>details</code> and <code>summary</code> tags.
             </p>
             <aside>
-                <img src="./html_picture.jpg" width="100" height="50">
+                <img src="./html_picture.jpg" alt="html_picture" width="100" height="50">
             </aside>
         </section>
     </body>
