--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Rita's Personal Portfolio</title>
         <meta name="author" content="Rita Abraham">
